log

Thu 17 Aug 2023 08:29:25 PM UTC: 
 tests:  0|7
total_score: 0/70
eafd656
Thu 17 Aug 2023 08:30:26 PM UTC: 
 exercises.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘encontrar_maximo’:
exercises.c:14:3: error: unknown type name ‘us’
   14 |   us num_mayor = arreglo[0];
      |   ^~
exercises.c:15:7: error: unknown type name ‘us’
   15 |   for(us i = 1 ; i < tamano ; i++)
      |       ^~
test.c: In function ‘test_findMax’:
test.c:91:18: error: implicit declaration of function ‘findMax’ [-Werror=implicit-function-declaration]
   91 |     int result = findMax(arr, size);
      |                  ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
77ee814
Thu 17 Aug 2023 08:30:45 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
test.c: In function ‘test_findMax’:
test.c:91:18: error: implicit declaration of function ‘findMax’ [-Werror=implicit-function-declaration]
   91 |     int result = findMax(arr, size);
      |                  ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
269aceb
